--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB CPP_FILES src/*.cpp)
 file(GLOB HPP_FILES src/*.h)
 
 add_library(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
-target_link_libraries(${PROJECT_NAME} pq pqxx)
+target_link_libraries(${PROJECT_NAME} pq)
 target_include_directories(${PROJECT_NAME} PUBLIC src)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
