not build example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,15 @@ project(storage)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
+option(BUILD_EXAMPLE "Build example code" OFF)
+
 if(EXISTS ${PROJECT_SOURCE_DIR}/deps/mor/CMakeLists.txt AND NOT TARGET mor)
     add_subdirectory(deps/mor)
 endif()
 
-add_subdirectory(test)
+if(BUILD_EXAMPLE)
+    add_subdirectory(example)
+endif()
 
 file(GLOB CPP_FILES src/backend.cpp)
 file(GLOB HPP_FILES src/backend.h)
@@ -18,7 +22,7 @@ find_package (sqlite3)
 if (SQLITE3_FOUND)
   set(CPP_FILES ${CPP_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/src/sqlite.cpp)
   include_directories(${SQLITE3_INCLUDE_DIRS})
-  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} sqlite3)
+  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} ${SQLITE3_LIBRARIES})
 endif (SQLITE3_FOUND)
 
 find_package (PostgreSQL)
@@ -31,7 +35,7 @@ message(STATUS "CPP_FILES ${CPP_FILES}")
 message(STATUS "LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND}")
 
 add_library(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
-target_link_libraries(${PROJECT_NAME} mor pq ${LIBRARIES_FOR_BACKEND})
+target_link_libraries(${PROJECT_NAME} mor ${LIBRARIES_FOR_BACKEND})
 target_include_directories(${PROJECT_NAME} PUBLIC src)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
