--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,14 +25,15 @@ if (SQLITE3_FOUND)
   set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} ${SQLITE3_LIBRARIES})
 endif (SQLITE3_FOUND)
 
-find_package (PostgreSQL)
-if (POSTGRESQL_FOUND)
+#find_package (PostgreSQL)
+if (TRUE)
   set(CPP_FILES ${CPP_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/storage/postgresql.cpp)
   include_directories(${POSTGRESQL_INCLUDE_DIR})
-  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} ${POSTGRESQL_LIBRARIES})
+  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} )#${POSTGRESQL_LIBRARIES})
 endif (POSTGRESQL_FOUND)
-message(STATUS "CPP_FILES ${CPP_FILES}")
-message(STATUS "LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND}")
+
+message(STATUS "CPP_FILES: ${CPP_FILES}")
+message(STATUS "LIBRARIES_FOR_BACKEND: ${LIBRARIES_FOR_BACKEND}")
 
 add_library(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
 target_link_libraries(${PROJECT_NAME} mor ${LIBRARIES_FOR_BACKEND})
