--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,11 @@ if (SQLITE3_FOUND)
 endif (SQLITE3_FOUND)
 
 find_package(PostgreSQL)
-if (PostgreSQL_FOUND)
+if (TRUE)
   set(CPP_FILES ${CPP_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/storage/postgresql.cpp)
-  include_directories(${POSTGRESQL_INCLUDE_DIR})
-  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} ${POSTGRESQL_LIBRARIES})
-endif (PostgreSQL_FOUND)
+  #include_directories(${POSTGRESQL_INCLUDE_DIR})
+  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} pq)
+endif ()
 
 message(STATUS "LIBRARIES_FOR_BACKEND: ${LIBRARIES_FOR_BACKEND}")
 if(NOT LIBRARIES_FOR_BACKEND)
