--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -7,4 +7,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 file(GLOB CPP_FILES *.cpp)
 add_executable(${PROJECT_NAME} ${CPP_FILES})
 
-target_link_libraries(${PROJECT_NAME} storage)
+target_link_libraries(${PROJECT_NAME} storage pthread d3util)
