versão compilavel no mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 
 project(storage)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} $ENV{CXXFLAGS} $ENV{CPPFLAGS}")
 
 option(BUILD_EXAMPLE "Build example code" OFF)
 
@@ -21,7 +22,7 @@ endif()
 file(GLOB CPP_FILES storage/backend.cpp storage/expression.cpp)
 file(GLOB HPP_FILES storage/backend.h storage/expression.h storage/query.h)
 
-find_package (sqlite3)
+#find_package (sqlite3)
 if (SQLITE3_FOUND)
   set(CPP_FILES ${CPP_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/storage/sqlite.cpp)
   include_directories(${SQLITE3_INCLUDE_DIRS})
@@ -30,15 +31,20 @@ endif (SQLITE3_FOUND)
 
 find_package(PostgreSQL)
 if (TRUE)
-  set(CPP_FILES ${CPP_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/storage/postgresql.cpp)
-  #include_directories(${POSTGRESQL_INCLUDE_DIR})
-  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} pq)
+  set(CPP_FILES ${CPP_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/storage/postgresql.cpp
+                             ${CMAKE_CURRENT_SOURCE_DIR}/storage/postgresql.h)
+  include_directories(${PostgreSQL_INCLUDE_DIRS})
+  set(LIBRARIES_FOR_BACKEND ${LIBRARIES_FOR_BACKEND} PRIVATE pq)
 endif ()
 
 message(STATUS "LIBRARIES_FOR_BACKEND: ${LIBRARIES_FOR_BACKEND}")
 if(NOT LIBRARIES_FOR_BACKEND)
     message(FATAL_ERROR "LIBRARIES_FOR_BACKEND is empty")
 endif()
+
+add_compile_definitions(BOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED=1)
+find_package(Boost REQUIRED COMPONENTS system)
+include_directories(src ${Boost_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
 target_link_libraries(${PROJECT_NAME} ${LIBRARIES_FOR_BACKEND} mor d3util )
