--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 project(test_storage)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+add_compile_definitions(BOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED=1)
 
 file(GLOB CPP_FILES *.cpp)
 add_executable(${PROJECT_NAME} ${CPP_FILES})
