--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/mor"]
 	path = deps/mor
 	url = https://github.com/d3roch4/mor.git
+[submodule "deps/d3util"]
+	path = deps/d3util
+	url = https://github.com/d3roch4/d3util
